# teopvdkt

./: .gitignore  MANIFEST.in  README.md  ggml-common.patch  install.sh  pyproject.toml  requirements-local_chat.txt  setup.py
csrc/balance_serve/: CMakeLists.txt
csrc/balance_serve/kvc2/src/: prefix.cpp
csrc/ktransformers_ext/: CMakeLists.txt
ktransformers/: local_chat.py
ktransformers/configs/: config.yaml
ktransformers/server/: main.py
